qt/multimedia/gen_qcameraflashcontrol.h

class QCameraFlashControl;
class QMetaObject;
typedef struct QCameraFlashControl QCameraFlashControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QCameraFlashControl_metaObject(const QCameraFlashControl* self);
void* QCameraFlashControl_metacast(QCameraFlashControl* self, const char* param1);
int QCameraFlashControl_metacall(QCameraFlashControl* self, int param1, int param2, void** param3);
struct miqt_string QCameraFlashControl_tr(const char* s);
struct miqt_string QCameraFlashControl_trUtf8(const char* s);
int QCameraFlashControl_flashMode(const QCameraFlashControl* self);
void QCameraFlashControl_setFlashMode(QCameraFlashControl* self, int mode);
bool QCameraFlashControl_isFlashModeSupported(const QCameraFlashControl* self, int mode);
bool QCameraFlashControl_isFlashReady(const QCameraFlashControl* self);
void QCameraFlashControl_flashReady(QCameraFlashControl* self, bool param1);
void QCameraFlashControl_connect_flashReady(QCameraFlashControl* self, intptr_t slot);
struct miqt_string QCameraFlashControl_tr2(const char* s, const char* c);
struct miqt_string QCameraFlashControl_tr3(const char* s, const char* c, int n);
struct miqt_string QCameraFlashControl_trUtf82(const char* s, const char* c);
struct miqt_string QCameraFlashControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraFlashControl_staticMetaObject();
void QCameraFlashControl_delete(QCameraFlashControl* self);